# twitch_relay

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  docker-compose.yml  regenerate_m3u8.rs
.github/workflows/: app-checks.yml  deploy-prod.yml  docker-checks.yml  publish-ghcr.yml
docs/: ARCHITECTURE.md  TODO.md
scripts/: generate_hls_playlist.py  generate_hls_playlist_mp4.py
src/: app.rs  auth.rs  channel_catalog.rs  channels.rs  chat.rs  config.rs  error.rs  hls_generator.rs  live_status.rs  main.rs  playback.rs  prewarm.rs  recording.rs  recording_rules.rs  recording_scheduler.rs  relay.rs  secure_store.rs  stream_proxy.rs  ts_mp4_remuxer.rs  twitch_auth.rs  twitch_follows.rs
src/templates/: watch.html
web/: .oxfmtignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/: app.d.ts
web/src/lib/: api.ts
web/src/routes/: +page.svelte
web/src/routes/channels/[login]/: +page.svelte  +page.ts
web/src/routes/recordings/play/: +page.svelte
web/static/: hls.js  watch-chat.js  watch-core.js  watch-emotes.js  watch-init.js  watch-player.js  watch.css  watch.js
