[package]
name = "twitch-relay"
version = "0.3.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
axum = "0.8.6"
base64 = "0.22.1"
futures-util = "0.3.31"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "process", "net"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6.6", features = ["fs", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
directories = "5"
dotenvy = "0.15.7"
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
